tests/bad/enum-assign-int.pas
program enum_assign_int;

type
    Color = (Red, Green);

var
    c: Color;

begin
    c := 1
end.
